--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">Dmoviesplus</string>
     <string name="dmovies">Dmovies +</string>
+    <string name="home">Home</string>
+    <string name="search">Search</string>
+    <string name="download">Download</string>
+    <string name="user">User</string>
 </resources>
